# oci-examples

./: .gitignore  MCP_INSPECTOR_GUIDE.md  NOTES.md  README.md  env_example.txt  pyproject.toml
sql/: setup_select_ai.sql
src/: README.md  __init__.py  main.py  mcp_server.py  test_mcp_client.py  test_openai_mcp_bridge.py  test_python_access.py
src/app/: README.md  __init__.py  chat_app.py  mcp_chat.py
